# gLike

./: .clang-format  .escape.yml  .gitignore  .rootrc  .zenodo.json  CMakeLists.txt  Gloryduck_example_file.txt  Makefile  README  README.md  codemeta.json  gloryduck.sh  gloryduck_format.txt  jointLklDM.C  jointLklDM_line.C  jointLklDM_line_tomo.C  transform_gloryduck_format.py
.github/wiki/figures/: README.md
DM/dNdE/: dNdE .ipynb
DM/dNdE/Cirelli/: dNdESignal_VV-4e_10.0mass.root  dNdESignal_VV-4e_100.0mass.root  dNdESignal_VV-4e_1000.0mass.root  dNdESignal_VV-4e_100000.0mass.root  dNdESignal_VV-4e_110.0mass.root  dNdESignal_VV-4e_1100.0mass.root  dNdESignal_VV-4e_120.0mass.root  dNdESignal_VV-4e_1200.0mass.root  dNdESignal_VV-4e_12000.0mass.root  dNdESignal_VV-4e_130.0mass.root  dNdESignal_VV-4e_1300.0mass.root  dNdESignal_VV-4e_140.0mass.root  dNdESignal_VV-4e_1500.0mass.root  dNdESignal_VV-4e_160.0mass.root  dNdESignal_VV-4e_1700.0mass.root  dNdESignal_VV-4e_200.0mass.root  dNdESignal_VV-4e_2000.0mass.root  dNdESignal_VV-4e_220.0mass.root  dNdESignal_VV-4e_240.0mass.root  dNdESignal_VV-4e_25.0mass.root  dNdESignal_VV-4e_2500.0mass.root  dNdESignal_VV-4e_260.0mass.root  dNdESignal_VV-4e_280.0mass.root  dNdESignal_VV-4e_30.0mass.root  dNdESignal_VV-4e_300.0mass.root  dNdESignal_VV-4e_3000.0mass.root  dNdESignal_VV-4e_330.0mass.root  dNdESignal_VV-4e_360.0mass.root  dNdESignal_VV-4e_400.0mass.root  dNdESignal_VV-4e_4000.0mass.root  dNdESignal_VV-4e_450.0mass.root  dNdESignal_VV-4e_5.0mass.root  dNdESignal_VV-4e_500.0mass.root  dNdESignal_VV-4e_50000.0mass.root  dNdESignal_VV-4e_550.0mass.root  dNdESignal_VV-4e_60.0mass.root  dNdESignal_VV-4e_600.0mass.root  dNdESignal_VV-4e_650.0mass.root  dNdESignal_VV-4e_7000.0mass.root  dNdESignal_VV-4e_750.0mass.root  (+876 more)
DM/dNdE/CosmiXs/: dNdESignal_WW_10.0mass.root  dNdESignal_WW_100.0mass.root  dNdESignal_WW_1000.0mass.root  dNdESignal_WW_10000.0mass.root  dNdESignal_WW_100000.0mass.root  dNdESignal_WW_110.0mass.root  dNdESignal_WW_1100.0mass.root  dNdESignal_WW_120.0mass.root  dNdESignal_WW_1200.0mass.root  dNdESignal_WW_12000.0mass.root  dNdESignal_WW_130.0mass.root  dNdESignal_WW_1300.0mass.root  dNdESignal_WW_140.0mass.root  dNdESignal_WW_15.0mass.root  dNdESignal_WW_150.0mass.root  dNdESignal_WW_1500.0mass.root  dNdESignal_WW_15000.0mass.root  dNdESignal_WW_160.0mass.root  dNdESignal_WW_162.0mass.root  dNdESignal_WW_1700.0mass.root  dNdESignal_WW_180.0mass.root  dNdESignal_WW_20.0mass.root  dNdESignal_WW_200.0mass.root  dNdESignal_WW_2000.0mass.root  dNdESignal_WW_20000.0mass.root  dNdESignal_WW_220.0mass.root  dNdESignal_WW_240.0mass.root  dNdESignal_WW_25.0mass.root  dNdESignal_WW_2500.0mass.root  dNdESignal_WW_260.0mass.root  dNdESignal_WW_280.0mass.root  dNdESignal_WW_30.0mass.root  dNdESignal_WW_300.0mass.root  dNdESignal_WW_3000.0mass.root  dNdESignal_WW_30000.0mass.root  dNdESignal_WW_330.0mass.root  dNdESignal_WW_360.0mass.root  dNdESignal_WW_40.0mass.root  dNdESignal_WW_400.0mass.root  dNdESignal_WW_4000.0mass.root  (+707 more)
DM/dNdE/HDMSpectra/: dNdESignal_WW_1000.0fmass 2.root  dNdESignal_WW_1000.0mass.root  dNdESignal_WW_10000.0fmass.root  dNdESignal_WW_10000.0mass.root  dNdESignal_WW_100000.0fmass.root  dNdESignal_WW_100000.0mass.root  dNdESignal_WW_1100.0fmass.root  dNdESignal_WW_1100.0mass.root  dNdESignal_WW_1200.0fmass.root  dNdESignal_WW_1200.0mass.root  dNdESignal_WW_12000.0fmass.root  dNdESignal_WW_12000.0mass.root  dNdESignal_WW_1300.0fmass 2.root  dNdESignal_WW_1300.0mass.root  dNdESignal_WW_1500.0fmass.root  dNdESignal_WW_1500.0mass.root  dNdESignal_WW_15000.0fmass.root  dNdESignal_WW_15000.0mass.root  dNdESignal_WW_1700.0fmass.root  dNdESignal_WW_1700.0mass.root  dNdESignal_WW_2000.0fmass.root  dNdESignal_WW_2000.0mass.root  dNdESignal_WW_20000.0fmass.root  dNdESignal_WW_20000.0mass.root  dNdESignal_WW_2500.0fmass.root  dNdESignal_WW_2500.0mass.root  dNdESignal_WW_3000.0fmass.root  dNdESignal_WW_3000.0mass.root  dNdESignal_WW_30000.0fmass.root  dNdESignal_WW_30000.0mass.root  dNdESignal_WW_4000.0fmass.root  dNdESignal_WW_4000.0mass.root  dNdESignal_WW_500.0fmass.root  dNdESignal_WW_500.0mass.root  dNdESignal_WW_5000.0fmass.root  dNdESignal_WW_5000.0mass.root  dNdESignal_WW_50000.0fmass.root  dNdESignal_WW_50000.0mass.root  dNdESignal_WW_550.0fmass 2.root  dNdESignal_WW_550.0mass.root  (+680 more)
DM/dNdE/electrons/: dNdESignal_V->\[Mu]_10.0mass.root  dNdESignal_V->\[Mu]_100.0mass.root  dNdESignal_V->\[Mu]_1000.0mass.root  dNdESignal_V->\[Mu]_10000.0mass.root  dNdESignal_V->\[Mu]_100000.0mass.root  dNdESignal_V->\[Mu]_110.0mass.root  dNdESignal_V->\[Mu]_1100.0mass.root  dNdESignal_V->\[Mu]_120.0mass.root  dNdESignal_V->\[Mu]_1200.0mass.root  dNdESignal_V->\[Mu]_12000.0mass.root  dNdESignal_V->\[Mu]_130.0mass.root  dNdESignal_V->\[Mu]_1300.0mass.root  dNdESignal_V->\[Mu]_140.0mass.root  dNdESignal_V->\[Mu]_15.0mass.root  dNdESignal_V->\[Mu]_150.0mass.root  (+1721 more)
data/: genericIact_dataIRF_01.root  genericIact_dataIRF_02.root
exec/: computeCLBands.cc  jointLklDM.cc
include/: FermiTables2016Lkl.h  GloryDuckTables2019Lkl.h  H1FPdf.h  HdNdE.h  Iact1dBinnedLkl.h  Iact1dUnbinnedLkl.h  IactEventListIrf.h  JointLkl.h  LineSearchLkl.h  Lkl.h  MIACTEventListIRF.h  ParabolaLkl.h  PoissonLkl.h  TemplateLkl.h  gLikeLinkDef.h
notebooks/: test_JointLkl.ipynb  test_PoissonLkl.ipynb
rcfiles/: LAT_dSph_2015_jointLklDM.rc  jointLklDM.rc  jointLklDM_tomo.rc
scripts/: computeCLBands.C  convertGLikeInputFiles.C  dohtml.C  jointLklDM.C  jointLklDMGloryduck.C  rootlogon.C  testBranonDMSearches.C  testDMSearches.C  testInputFITS.C  testJointLkl.C  testPoissonLkl.C  test_PoissonLkl.ipynb  tutorialDMSearches.C  tutorialJointLkl.C  tutorialPoissonLkl.C
singularity/: README.md
src/: FermiTables2016Lkl.cc  GloryDuckTables2019Lkl.cc  H1FPdf.cc  HdNdE.cc  Iact1dBinnedLkl.cc  Iact1dUnbinnedLkl.cc  IactEventListIrf.cc  JointLkl.cc  LineSearchLkl.cc  Lkl.cc  MIACTEventListIRF.cc  ParabolaLkl.cc  PoissonLkl.cc  TemplateLkl.cc
test/: TestSuiteIactEventListIrf.cc  TestSuiteJointLkl.cc  TestSuitePoissonLkl.cc  main.C  main.cpp  main_cpp.d  testSuitePoissonLkl.cpp
(+1 files in other folders)
